<?xml version="1.0"?>
<package>
  <name>wheeltec_hardware_interface</name>
  <version>0.0.1</version>
  <description>The my_robot_base package</description>

  <maintainer email="emiliano.borghi@gmail.com">Emiliano Borghi</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>controller_manager</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>roslaunch</build_depend>
  <build_depend>hardware_interface</build_depend>
  <build_depend>trajectory_msgs</build_depend>
  <build_depend>transmission_interface</build_depend>
  
  <run_depend>controller_manager</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>hardware_interface</run_depend>
  <run_depend>effort_controllers</run_depend>
  <run_depend>trajectory_msgs</run_depend>
 <run_depend>transmission_interface</run_depend>
  <!-- Very important for this kind of robot!! -->


  <export>
  </export>
</package>